--- a/drone-monitor-consumer/src/main/resources/application.properties
+++ b/drone-monitor-consumer/src/main/resources/application.properties
@@ -1,1 +1,8 @@
 
+# MongoDB
+spring.data.mongodb.host=${MONGODB_HOST:localhost}
+spring.data.mongodb.port=${MONGODB_PORT:27017}
+spring.data.mongodb.database=${MONGODB_DATABASE:broker-drone-monitor-db}
+spring.data.mongodb.username=${MONGODB_USERNAME:admin}
+spring.data.mongodb.password=${MONGODB_PASSWORD:admin}
+spring.data.mongodb.authentication-database=${MONGODB_AUTH_DATABASE:admin}
