--- a/drone-monitor-producer/src/main/resources/application.properties
+++ b/drone-monitor-producer/src/main/resources/application.properties
@@ -1,20 +1,11 @@
-# Port
-server.port=8080
+server.port = 8082
 
-# ContextPath
-server.servlet.contextPath=/api/v1/drones
+# Producer properties
+spring.kafka.producer.bootstrap-servers=127.0.0.1:29092
+spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
+spring.kafka.producer.value-serializer=org.apache.kafka.common.serialization.StringSerializer
+spring.kafka.producer.group-id=group_id
+topic.name.producer=fiap.scj.teste
 
-# Swagger
-springfox.documentation.open-api.v3.path=/api-docs
-spring.mvc.pathmatch.matching-strategy=ant_path_matcher
-
-#Quartz
-simplejob.frequency=1000
-
-# MongoDB
-spring.data.mongodb.host=${MONGODB_HOST:localhost}
-spring.data.mongodb.port=${MONGODB_PORT:27017}
-spring.data.mongodb.database=${MONGODB_DATABASE:broker-drone-monitor-db}
-spring.data.mongodb.username=${MONGODB_USERNAME:admin}
-spring.data.mongodb.password=${MONGODB_PASSWORD:admin}
-spring.data.mongodb.authentication-database=${MONGODB_AUTH_DATABASE:admin}
+# Common Kafka Properties
+auto.create.topics.enable=true
