--- a/drone-monitor-producer/src/main/resources/application.properties
+++ b/drone-monitor-producer/src/main/resources/application.properties
@@ -1,11 +1,12 @@
-server.port = 8082
+server.port=8082
+server.servlet.contextPath=/api/v1/drones-monitor
 
 # Producer properties
 spring.kafka.producer.bootstrap-servers=127.0.0.1:29092
 spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
-spring.kafka.producer.value-serializer=org.apache.kafka.common.serialization.StringSerializer
-spring.kafka.producer.group-id=group_id
-topic.name.producer=fiap.scj.teste
+spring.kafka.producer.value-serializer=org.springframework.kafka.support.serializer.JsonSerializer
+spring.kafka.producer.group-id=drone_group
+topic.name.producer=drone_topic
 
 # Common Kafka Properties
 auto.create.topics.enable=true
