--- a/drone-monitor-consumer/build.gradle
+++ b/drone-monitor-consumer/build.gradle
@@ -8,25 +8,24 @@ group = 'br.com.fiap.broker'
 version = '0.0.1-SNAPSHOT'
 sourceCompatibility = '11'
 
+configurations {
+	compileOnly {
+		extendsFrom annotationProcessor
+	}
+}
+
+
 repositories {
 	mavenCentral()
 }
 
 dependencies {
+	implementation 'org.springframework.boot:spring-boot-starter'
 	implementation 'org.springframework.kafka:spring-kafka'
-	implementation 'org.projectlombok:lombok:1.18.20'
-	//implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
-	//implementation 'org.springframework.boot:spring-boot-starter-data-mongodb'
-	//implementation 'org.springframework.boot:spring-boot-starter-mail'
-	//implementation 'org.apache.commons:commons-lang3:3.12.0'
-
-	annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
-	annotationProcessor 'org.projectlombok:lombok'
+	implementation 'com.fasterxml.jackson.core:jackson-databind:2.13.0'
 
 	compileOnly 'org.projectlombok:lombok'
-	//compileOnly 'org.springframework.boot:spring-boot-configuration-processor'
-
-	developmentOnly 'org.springframework.boot:spring-boot-devtools'
+	annotationProcessor 'org.projectlombok:lombok'
 
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testImplementation 'org.springframework.kafka:spring-kafka-test'
