Projeto Monitoramento Drones Kafka - Ajustes Job

--- a/drone-monitor-consumer/src/main/resources/application.properties
+++ b/drone-monitor-consumer/src/main/resources/application.properties
@@ -1,10 +1,32 @@
-server.port=8082
+server.port=8081
 
 # Consumer Properties
 spring.kafka.bootstrap-servers=127.0.0.1:29092
 
+group.name.consumer=drone_group
+topic.name.consumer=drone_topic
+
 # Common Kafka Properties
 auto.create.topics.enable=true
 
-group.name.consumer=drone_group
-topic.name.consumer=drone_topic
+# Mail Sender Properties
+mail.sender.fromAddress=ricardosoareslacerda@gmail.com
+mail.sender.toAddresses=giandreialemos@gmail.com
+mail.sender.subject=Drone Alert Information - Drone Falling
+
+# Mail Server
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=ricardosoareslacerda@gmail.com
+spring.mail.password=sxotxkeujrrvqymu
+
+# Mail Server Connections Properties
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.connectiontimeout=5000
+spring.mail.properties.mail.smtp.timeout=5000
+spring.mail.properties.mail.smtp.writetimeout=5000
+spring.mail.transport.protocol=smtp
+spring.mail.debug=false
+
+# Mail Server ConnectTLS , port 587
+spring.mail.properties.mail.smtp.starttls.enable=true
