--- a/drone-monitor-producer/src/main/resources/application.properties
+++ b/drone-monitor-producer/src/main/resources/application.properties
@@ -10,3 +10,7 @@ topic.name.producer=drone_topic
 
 # Common Kafka Properties
 auto.create.topics.enable=true
+
+# Swagger
+#springfox.documentation.open-api.v3.path=/api-docs
+#spring.mvc.pathmatch.matching-strategy=ant_path_matcher
