--- a/drone-monitor-job/build.gradle
+++ b/drone-monitor-job/build.gradle
@@ -4,7 +4,7 @@ plugins {
 	id 'java'
 }
 
-group = 'br.com.fiap.broker'
+group = 'br.com.fiap.broke'
 version = '0.0.1-SNAPSHOT'
 sourceCompatibility = '11'
 
@@ -19,27 +19,19 @@ repositories {
 }
 
 dependencies {
-	implementation 'org.springframework.boot:spring-boot-starter'
-	implementation 'org.springframework.boot:spring-boot-starter-mail'
 	implementation 'org.springframework.boot:spring-boot-starter-freemarker'
-
-	implementation 'org.springframework.kafka:spring-kafka'
-	implementation 'org.apache.commons:commons-lang3:3.12.0'
-	implementation 'org.projectlombok:lombok:1.18.20'
-	implementation 'com.fasterxml.jackson.core:jackson-databind:2.13.0'
-	implementation 'commons-io:commons-io:2.11.0'
 	implementation 'com.google.code.gson:gson:2.8.2'
+	implementation 'org.apache.commons:commons-lang3:3.4'
+	implementation 'org.springframework:spring-web:5.3.18'
 
 	compileOnly 'org.projectlombok:lombok'
-	compileOnly 'org.springframework.boot:spring-boot-configuration-processor'
+
+	developmentOnly 'org.springframework.boot:spring-boot-devtools'
 
 	annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
 	annotationProcessor 'org.projectlombok:lombok'
 
-	developmentOnly 'org.springframework.boot:spring-boot-devtools'
-
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
-	testImplementation 'org.springframework.kafka:spring-kafka-test'
 }
 
 tasks.named('test') {
