--- a/drone-monitor-producer/build.gradle
+++ b/drone-monitor-producer/build.gradle
@@ -1,7 +1,7 @@
 plugins {
-	id 'org.springframework.boot' version '2.4.2'
+	id 'org.springframework.boot' version '2.6.6'
 	id 'io.spring.dependency-management' version '1.0.11.RELEASE'
-	id 'com.github.johnrengelman.processes' version "0.5.0"
+	//id 'org.springdoc.openapi-gradle-plugin' version "1.3.3"
 	id 'java'
 }
 
@@ -20,10 +20,12 @@ repositories {
 }
 
 dependencies {
+	implementation 'org.springframework:spring-context-support:5.2.8.RELEASE'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'org.springframework.kafka:spring-kafka'
+	implementation 'org.apache.commons:commons-lang3:3.12.0'
 	implementation 'org.projectlombok:lombok:1.18.20'
-	implementation 'org.springframework:spring-context-support:5.2.8.RELEASE'
+	implementation 'com.google.code.gson:gson:2.8.2'
 	//implementation 'io.springfox:springfox-boot-starter:3.0.0'
 	//implementation 'io.springfox:springfox-swagger-ui:3.0.0'
 
