Ajustes E-mail, Validações Importante do Funcionamento

--- a/drone-monitor-consumer/src/main/resources/application.properties
+++ b/drone-monitor-consumer/src/main/resources/application.properties
@@ -11,7 +11,7 @@ auto.create.topics.enable=true
 
 # Mail Sender Properties
 mail.sender.fromAddress=ricardosoareslacerda@gmail.com
-mail.sender.toAddresses=giandreialemos@gmail.com
+mail.sender.toAddresses=profrafael.mazzucato@fiap.com.br
 mail.sender.subject=Drone Alert Information - Drone Falling
 
 # Mail Server
