--- a/drone-cluster-monitor-job/build.gradle
+++ b/drone-cluster-monitor-job/build.gradle
@@ -4,7 +4,7 @@ plugins {
 	id 'java'
 }
 
-group = 'br.com.fiap.broke'
+group = 'br.com.fiap.broker'
 version = '0.0.1-SNAPSHOT'
 sourceCompatibility = '11'
 
