--- a/drone-cluster-monitor-consumer/src/main/resources/application.properties
+++ b/drone-cluster-monitor-consumer/src/main/resources/application.properties
@@ -1,10 +1,8 @@
-server.port=8081
-
 # Consumer Properties
-spring.kafka.bootstrap-servers=127.0.0.1:29092
+spring.kafka.bootstrap-servers=${HOST_KAFKA_DOCKER_INTERNAL:127.0.0.1}:29092
 
-group.name.consumer=drone_group
-topic.name.consumer=drone_topic
+group.name.consumer=${KAFKA_GROUP:drone_group}
+topic.name.consumer=${KAFKA_TOPIC:drone_topic}
 
 # Common Kafka Properties
 auto.create.topics.enable=true
@@ -30,3 +28,20 @@ spring.mail.debug=false
 
 # Mail Server ConnectTLS , port 587
 spring.mail.properties.mail.smtp.starttls.enable=true
+
+# MongoDB
+spring.data.mongodb.host=${MONGODB_HOST:127.0.0.1}
+spring.data.mongodb.port=${MONGODB_PORT:27017}
+spring.data.mongodb.database=${MONGODB_DATABASE:dronedb}
+spring.data.mongodb.username=${MONGODB_USERNAME:admin}
+spring.data.mongodb.password=${MONGODB_PASSWORD:admin}
+spring.data.mongodb.authentication-database=${MONGODB_AUTH_DATABASE:admin}
+
+# Environment Variable DockerFile
+# ENV -> HOST_KAFKA_DOCKER_INTERNAL=host.docker.internal
+# host.docker.internal (host internal docker )
+# 127.0.0.1 (host not compile in docker) (without docker)
+# KAFKA_GROUP -> drone_group
+# KAFKA_TOPIC -> drone_topic
+# ${HOST_MONGO_DOCKER_INTERNAL:127.0.0.1}
+# ${PORT_MONGO_DOCKER_INTERNAL:27017}
