--- a/drone-cluster-monitor-job/src/main/resources/application.properties
+++ b/drone-cluster-monitor-job/src/main/resources/application.properties
@@ -2,8 +2,16 @@
 dronemonitor.job.cron-scheduler=0/10 * * * * ?
 
 # API Kafka Producer
-drone.api.host.path=http://localhost:8082/api/v1/drones-monitor/
-drone.api.host.resource=drones/register/
+drone.api.host.path=http://${PATH_HOST_PRODUCER_DOCKER_INTERNAL:localhost:8082/api/v1/drones-monitor/}
+drone.api.host.resource=${RESOURCE_API_HOST_PRODUCER:drones/register/}
 
 #Drones Monitor
-listOfDrones={drone1: 'Drone Sao Paulo Leste', drone2: 'Drone Sao Paulo Oeste', drone3: 'Drone Sao Paulo Norte', drone4: 'Drone Sao Paulo Sul'}
+listOfDrones={drone1: 'Drone Sao Paulo Leste', drone2: 'Drone Sao Paulo Oeste', drone3: 'Drone Sao Paulo Norte', drone4: 'Drone Sao Paulo Sul', \
+  drone5: 'Drone Sao Paulo Leste 1', drone6: 'Drone Sao Paulo Leste 2', drone7: 'Drone Sao Paulo Leste 3', drone8: 'Drone Sao Paulo Leste 4', \
+  drone9: 'Drone Sao Paulo Sul 1', drone10: 'Drone Sao Paulo Sul 2', dron11: 'Drone Sao Paulo Sul 3', drone12: 'Drone Sao Paulo Sul 4'}
+
+# Environment Variable DockerFile
+# ENV -> PATH_HOST_PRODUCER_DOCKER_INTERNAL=host.docker.internal:8082/api/v1/drones-monitor/
+# ENV -> RESOURCE_API_HOST_PRODUCER=drones/register/
+# host.docker.internal (host internal docker )
+# localhost (host not compile in docker) (without docker)
