--- a/drone-cluster-monitor-producer/src/main/resources/application.properties
+++ b/drone-cluster-monitor-producer/src/main/resources/application.properties
@@ -1,16 +1,26 @@
-server.port=8082
-server.servlet.contextPath=/api/v1/drones-monitor
+server.port=${PORT_HOST_PRODUCER_DOCKER_INTERNAL:8082}
+server.servlet.contextPath=${API_HOST_PRODUCER_DOCKER_INTERNAL:/api/v1/drones-monitor}
+
+# Swagger
+springfox.documentation.open-api.v3.path=/api-docs
+spring.mvc.pathmatch.matching-strategy=ant_path_matcher
 
 # Producer properties
-spring.kafka.producer.bootstrap-servers=127.0.0.1:29092
+spring.kafka.producer.bootstrap-servers=${HOST_KAFKA_DOCKER_INTERNAL:127.0.0.1}:29092
 spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
 spring.kafka.producer.value-serializer=org.springframework.kafka.support.serializer.JsonSerializer
-spring.kafka.producer.group-id=drone_group
-topic.name.producer=drone_topic
+spring.kafka.producer.group-id=${KAFKA_GROUP:drone_group}
+topic.name.producer=${KAFKA_TOPIC:drone_topic}
 
 # Common Kafka Properties
 auto.create.topics.enable=true
 
-# Swagger
-#springfox.documentation.open-api.v3.path=/api-docs
-#spring.mvc.pathmatch.matching-strategy=ant_path_matcher
+# Environment Variable DockerFile
+# ENV -> PORT_HOST_PRODUCER_DOCKER_INTERNAL=8082
+# ENV -> API_HOST_PRODUCER_DOCKER_INTERNAL=/api/v1/drones-monitor
+# ENV -> HOST_PRODUCER_DOCKER_INTERNAL=host.docker.internal
+# ENV -> HOST_KAFKA_DOCKER_INTERNAL=host.docker.internal
+# host.docker.internal (host internal docker )
+# 127.0.0.1 (host not compile in docker) (without docker)
+# KAFKA_GROUP -> drone_group
+# KAFKA_TOPIC -> drone_topic
