--- a/drone-cluster-monitor-consumer/build.gradle
+++ b/drone-cluster-monitor-consumer/build.gradle
@@ -1,6 +1,7 @@
 plugins {
 	id 'org.springframework.boot' version '2.6.6'
 	id 'io.spring.dependency-management' version '1.0.11.RELEASE'
+	id("com.github.johnrengelman.processes") version "0.5.0"
 	id 'java'
 }
 
@@ -22,6 +23,7 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter'
 	implementation 'org.springframework.boot:spring-boot-starter-mail'
 	implementation 'org.springframework.boot:spring-boot-starter-freemarker'
+	implementation 'org.springframework.boot:spring-boot-starter-data-mongodb'
 
 	implementation 'org.springframework.kafka:spring-kafka'
 	implementation 'org.apache.commons:commons-lang3:3.12.0'
@@ -29,6 +31,9 @@ dependencies {
 	implementation 'com.fasterxml.jackson.core:jackson-databind:2.13.0'
 	implementation 'commons-io:commons-io:2.11.0'
 	implementation 'com.google.code.gson:gson:2.8.2'
+	implementation 'com.github.joschi.jackson:jackson-datatype-threetenbp:2.6.4'
+	implementation 'javax.xml.bind:jaxb-api'
+	implementation 'org.springframework:spring-context-support:5.2.8.RELEASE'
 
 	compileOnly 'org.projectlombok:lombok'
 	compileOnly 'org.springframework.boot:spring-boot-configuration-processor'
