--- a/drone-cluster-monitor-job/build.gradle
+++ b/drone-cluster-monitor-job/build.gradle
@@ -19,17 +19,19 @@ repositories {
 }
 
 dependencies {
-	implementation 'org.springframework.boot:spring-boot-starter-freemarker'
-	implementation 'com.google.code.gson:gson:2.8.2'
+	implementation 'org.springframework.boot:spring-boot-starter'
 	implementation 'org.apache.commons:commons-lang3:3.4'
 	implementation 'org.springframework:spring-web:5.3.18'
+	implementation 'org.projectlombok:lombok:1.18.20'
+	implementation 'com.google.code.gson:gson:2.8.2'
 
 	compileOnly 'org.projectlombok:lombok'
-
-	developmentOnly 'org.springframework.boot:spring-boot-devtools'
+	compileOnly 'org.springframework.boot:spring-boot-configuration-processor'
 
 	annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
 	annotationProcessor 'org.projectlombok:lombok'
+
+	developmentOnly 'org.springframework.boot:spring-boot-devtools'
 
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
