Docker Compose Integrations

--- a/swarm/docker-compose.yml
+++ b/swarm/docker-compose.yml
@@ -247,6 +247,7 @@ services:
 networks:
     broker-net:
         name: broker-net
+        external: true
 volumes:
     dronedb:
     zookeeper1-data:
